// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignalTypeFilter /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    onSignalTypeChange={[MockFunction]}
    signalType="ALL"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          variant="compact"
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            All
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Adobe Analytics
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              All
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Adobe Analytics
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "variant": "compact",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "All",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Adobe Analytics",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            variant="compact"
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              All
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Adobe Analytics
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                All
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Adobe Analytics
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "variant": "compact",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "All",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Adobe Analytics",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SignalTypeFilter /> component rendering renders <Tab /> component with correct label when props.count change 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    onSignalTypeChange={[MockFunction]}
    signalType="ANALYTICS"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          variant="compact"
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            All (1100)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            Adobe Analytics (1000)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files (100)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data (0)
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records (0)
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (1100)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (1000)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (100)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (0)
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (0)
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "variant": "compact",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All (1100)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "All (1100)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics (1000)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "Adobe Analytics (1000)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files (100)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files (100)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data (0)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data (0)",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records (0)",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records (0)",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            variant="compact"
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All (1100)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics (1000)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files (100)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data (0)
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records (0)
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                All (1100)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                Adobe Analytics (1000)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files (100)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data (0)
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records (0)
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "variant": "compact",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All (1100)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "All (1100)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics (1000)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "Adobe Analytics (1000)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files (100)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files (100)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data (0)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data (0)",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records (0)",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records (0)",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SignalTypeFilter /> component rendering renders correctly selected <Tab /> component when props.signalType change 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    onSignalTypeChange={[MockFunction]}
    signalType="ANALYTICS"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className={undefined}
          size={3}
        >
          Filter by Signal Type
        </Heading>,
        <TabList
          className={undefined}
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          variant="compact"
        >
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            All
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={true}
          >
            Adobe Analytics
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Actionable Log Files
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            General Online Data
          </Tab>
          <Tab
            disabled={false}
            invalid={false}
            renderChildren={true}
            selected={false}
          >
            Onboarded Records
          </Tab>
        </TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": undefined,
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data
            </Tab>,
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records
            </Tab>,
          ],
          "className": undefined,
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "variant": "compact",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "All",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
            },
            "ref": null,
            "rendered": "Adobe Analytics",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Actionable Log Files",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "General Online Data",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
            },
            "ref": null,
            "rendered": "Onboarded Records",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className={undefined}
            size={3}
          >
            Filter by Signal Type
          </Heading>,
          <TabList
            className={undefined}
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            variant="compact"
          >
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              All
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
            >
              Adobe Analytics
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Actionable Log Files
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              General Online Data
            </Tab>
            <Tab
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
            >
              Onboarded Records
            </Tab>
          </TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": undefined,
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                All
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
              >
                Adobe Analytics
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Actionable Log Files
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                General Online Data
              </Tab>,
              <Tab
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
              >
                Onboarded Records
              </Tab>,
            ],
            "className": undefined,
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "variant": "compact",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "All",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
              },
              "ref": null,
              "rendered": "Adobe Analytics",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Actionable Log Files",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "General Online Data",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
              },
              "ref": null,
              "rendered": "Onboarded Records",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
